# recommendation-system-v3

./: .gitignore  .prettierignore  .prettierrc  README.md  commitlint.config.ts  package-lock.json  package.json
.github/workflows/: ci.yml
.husky/: commit-msg  pre-commit  pre-push
apps/api/: .env.example  .gitignore  README.md  main.py  pyproject.toml
apps/api/chains/: recommend.py
apps/api/scripts/: embed_shows.py
apps/api/tests/: conftest.py  test_health.py
apps/web/: .env.example  .gitignore  README.md  eslint.config.mjs  knip.json  next.config.ts  package.json  proxy.ts  vitest.config.ts
apps/web/app/: home.module.css  layout.tsx  page.tsx
apps/web/app/auth-flow/: auth-flow-content.ts  auth-flow.module.css  page.tsx
apps/web/app/recommend/: page.tsx  recommend.module.css
apps/web/app/shows/: page.tsx  shows.module.css
apps/web/app/signup/: page.tsx  signup.module.css
apps/web/components/auth/: AuthSplitLayout.tsx  auth-split.module.css
apps/web/components/header/: Header.tsx  header.module.css
apps/web/components/ui/: Input.tsx  Spinner.tsx  input.module.css  spinner.module.css
apps/web/drizzle/: 0000_create_users.sql  0001_clever_robin_chapel.sql  0002_graceful_black_widow.sql  0003_careful_luke_cage.sql  0004_burly_quasimodo.sql  0005_heavy_lifeguard.sql
apps/web/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
apps/web/lib/: counter.test.ts  counter.ts
apps/web/lib/auth/: db-errors.test.ts  db-errors.ts  signin.schema.test.ts  signin.server.test.ts  signup.schema.ts  signup.server.test.ts  signup.server.ts
apps/web/lib/db/: index.ts  schema.ts
apps/web/scripts/: import-shows-data.ts  setup-db.ts
docs/: ARCHITECTURE.md  AUTH-FLOW.md  GETTING-STARTED.md  README.md  STATUS.md  TOOLING-API.md  TOOLING-WEB.md
docs/setup/: local-setup.md  prerequisites.md
docs/tooling/: checks.md  commands.md  git-workflow.md  lint-format.md  node-version.md
docs/tooling-api/: commands.md  hooks.md  pyright.md  pytest.md  ruff.md
(+79 files in other folders)
