[project]
name = "recommendation-system-v3-api"
version = "0.1.0"
description = "FastAPI + LangServe recommendation API (Ollama + LangChain)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.137.0",
    "langchain==1.3.9",
    "langchain-ollama==1.1.0",
    "langserve==0.3.3",
    "langsmith==0.8.15",
    "python-dotenv==1.2.2",
    "sse-starlette==3.4.4",
    "uvicorn[standard]==0.49.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.17",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["chains"]

[tool.ruff.format]
quote-style = "double"
