[project]
name = "recommendation-system-v3-api"
version = "0.1.0"
description = "FastAPI + LangServe recommendation API (Ollama + LangChain)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.137.0",
    "langchain-core==1.4.7",
    "langchain-ollama==1.1.0",
    "langserve==0.3.3",
    "langsmith==0.8.15",
    "python-dotenv==1.2.2",
    "sse-starlette==3.4.4",
    "uvicorn[standard]==0.49.0",
]

[dependency-groups]
dev = [
    "deptry==0.25.1",
    "httpx2==2.4.0",
    "pyright==1.1.410",
    "pytest==9.1.0",
    "ruff==0.15.17",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["chains"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pyright]
include = ["chains", "main.py", "tests"]
exclude = [".venv", "**/__pycache__"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.deptry]
extend_exclude = ["tests"]

# Runtime/CLI deps with no direct import in our code
[tool.deptry.per_rule_ignores]
DEP002 = ["langsmith", "sse-starlette", "uvicorn"]
